<resources>
    <string name="app_name">Android Assignment</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="LoginTitle">Login</string>
    <string name="LoginHint">login name</string>
    <string name="LoginButton">Log on</string>
    <string name="PasswordTitle">password</string>
    <string name="Switch">What does this do?</string>
    <string name="RadioButton">Radio Button</string>
    <string name="Checkbox">Checkbox</string>
    <string name="dialog_message">Do you want to finish activity?</string>
    <string name="dialog_title">Finish Activity</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="switchOn">Switch is On</string>
    <string name="switchOff">Switch is Off</string>
    <string name="ChatButton">Start Chat</string>
    <string name="ChatSend">Send</string>
    <string name="ToolbarButton">Start Toolbar</string>
    <string name="GoBack">Do you want to go back?</string>
    <string name="ChangeSnack">Set option one Snackbar text?</string>
</resources>